--- a/style.scss
+++ b/style.scss
@@ -157,7 +157,7 @@ button {
 .contacto-pie {
   background-color: rgb(39, 38, 38);
 
-  width: 1800px;
+  width: 100%;
   padding: 2rem;
   box-shadow: 0rem 10px 30px -10px rgb(228, 8, 8);
   margin: 16px 20px 40px 20px;
@@ -256,7 +256,7 @@ button {
 }
 .parrafos2 {
   display: grid;
-  font-size: 1.3rem;
+  font-size: 13%;
   grid-area: parrafos2;
   padding: 10%;
   width: auto;
@@ -276,10 +276,10 @@ button {
 }
 
 .imagen-logo {
-  width: 28%;
+  width: 24%;
 
   position: absolute;
-  left: 72%;
+  left: 62%;
   margin-top: -3%;
 }
 
@@ -310,6 +310,7 @@ nav {
 .parrafos4 {
   width: auto;
 }
+
 /*mixin*/
 
 @mixin mixin-1($width, $height) {
@@ -322,5 +323,10 @@ nav {
 }
 .parrafowid {
   @include mixin-1(120%, 120%);
+  color: cadetblue;
+}
+.parrafowid {
+  height: 120%;
+  width: 70%;
   color: cadetblue;
 }
