--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .flex-cabezerademenu {
@@ -29,7 +29,8 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding: auto;
   background-color: #11100f;
   width: 99%;
@@ -122,7 +123,7 @@ button {
   width: 600px;
   padding: 2rem;
   -webkit-box-shadow: 0rem 10px 30px -10px #e2140d;
-          box-shadow: 0rem 10px 30px -10px #e2140d;
+  box-shadow: 0rem 10px 30px -10px #e2140d;
   margin: 0px 20px 40px 20px;
 }
 
@@ -132,7 +133,7 @@ button {
   width: 600px;
   padding: 2rem;
   -webkit-box-shadow: 0rem 10px 30px -10px #f30f07;
-          box-shadow: 0rem 10px 30px -10px #f30f07;
+  box-shadow: 0rem 10px 30px -10px #f30f07;
   margin: 0px 20px 40px 20px;
 }
 
@@ -167,7 +168,7 @@ button {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-line-pack: auto;
-      align-content: auto;
+  align-content: auto;
 }
 
 .bloques1 {
@@ -194,7 +195,7 @@ button {
   width: 100%;
   padding: 2rem;
   -webkit-box-shadow: 0rem 10px 30px -10px #e40808;
-          box-shadow: 0rem 10px 30px -10px #e40808;
+  box-shadow: 0rem 10px 30px -10px #e40808;
   margin: 16px 20px 40px 20px;
 }
 
@@ -214,9 +215,9 @@ button {
 .btn-neon:hover {
   background: #800d0d;
   -webkit-box-shadow: 0 0 4px #e90303f6, 0 0 30px #db0a0a, 0 0 80px #c40303;
-          box-shadow: 0 0 4px #e90303f6, 0 0 30px #db0a0a, 0 0 80px #c40303;
+  box-shadow: 0 0 4px #e90303f6, 0 0 30px #db0a0a, 0 0 80px #c40303;
   -webkit-transition-delay: 0.7s;
-          transition-delay: 0.7s;
+  transition-delay: 0.7s;
 }
 
 .btn-neon span {
@@ -229,7 +230,13 @@ button {
   left: -100%;
   width: 100%;
   height: 4px;
-  background: -webkit-gradient(linear, left top, right top, from(transparent), to(#f00909));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(transparent),
+    to(#f00909)
+  );
   background: linear-gradient(90deg, transparent, #f00909);
 }
 
@@ -267,8 +274,8 @@ button {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
   background-color: #242323;
 }
 
@@ -282,9 +289,9 @@ button {
   min-height: 300px;
   margin-top: -110px;
   -webkit-animation: swing;
-          animation: swing;
+  animation: swing;
   -webkit-animation-duration: 6s;
-          animation-duration: 6s;
+  animation-duration: 6s;
 }
 
 .flex-item-2 {
@@ -313,8 +320,8 @@ button {
   display: grid;
   padding: auto;
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+  -ms-flex-pack: start;
+  justify-content: start;
 }
 
 .parrafos2 {
@@ -331,9 +338,11 @@ button {
 .contenidoservicios {
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "imagen-quienessomos parrafos1" "parrafos2 imagencajita2";
+  grid-template-areas:
+    "imagen-quienessomos parrafos1"
+    "parrafos2 imagencajita2";
   -ms-grid-rows: auto auto;
-      grid-template-rows: auto auto;
+  grid-template-rows: auto auto;
   background-color: #242323;
   grid-gap: 1% 2%;
   padding: auto;
@@ -351,8 +360,8 @@ button {
   display: -ms-grid;
   display: grid;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: parrafos2;
@@ -391,7 +400,7 @@ nav {
 .mixin-1 {
   height: 50%;
   width: 80%;
-  background-color: #252525;
+  background-color: #000000;
 }
 
 .parrafowid {
