--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,10 @@
+@import "variable.css";
+
 * {
   padding: 0;
   box-sizing: border-box;
+  margin: 0;
+  text-decoration: none;
 }
 .flex-cabezerademenu {
   background-color: rgb(0, 0, 0);
