--- a/style.scss
+++ b/style.scss
@@ -1,429 +1,6 @@
+@import "fuentes";
+@import "variables";
+@import "general";
+@import "servicios";
+@import "quienessomos";
 @import "index";
-
-@import url(c:\Users\Abelito\Desktop\mispaginasweb\coderhouse\2clasehtml\variable.css);
-* {
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0;
-  text-decoration: none;
-}
-
-.flex-cabezerademenu {
-  background-color: black;
-  font-size: 0.2rem;
-  width: top;
-}
-
-.tarjeta {
-  background-color: black;
-  overflow: 100%;
-  color: #d4d4d4;
-}
-
-.letramenu {
-  color: darkgrey;
-}
-
-.parrafo1 {
-  color: #7ad691;
-}
-
-.p-5 {
-  background-color: rgb(156, 104, 96);
-}
-
-html {
-  height: 100px;
-  padding: 0;
-  background-color: #000000;
-}
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  padding: auto;
-  background-color: #11100f;
-  width: 99%;
-  color: black;
-}
-
-.parrafo2 {
-  color: #0a0c0c;
-}
-
-.video1 {
-  background-color: #11100f;
-}
-
-.piedepagina {
-  font-size: 15px;
-  background-color: darkred;
-  color: aliceblue;
-}
-
-.div-quienessomos {
-  background-color: #242323;
-  padding: 3%;
-  margin: 1%;
-}
-
-.logos1 {
-  font-size: 8px;
-}
-
-.columnas1 {
-  color: #2a4be0;
-}
-
-#formulario1 {
-  background-color: #161514;
-  color: aliceblue;
-  padding: 80px;
-}
-
-.cuerpo1--titulo {
-  font-family: "Merriweather", serif;
-  color: #f7f8f8;
-}
-
-.porqueelejirnos1 {
-  font-size: 20px;
-}
-
-.nav__list {
-  list-style: none;
-  font-style: normal;
-  text-align: left;
-  font-weight: bold;
-}
-
-button {
-  font-size: 20px;
-  top: 0%;
-  background-color: #161514;
-}
-
-.fa-whatsapp {
-  font-size: 40px;
-  color: #069e39;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.fa-facebook {
-  color: #3737f3;
-  font-size: 40px;
-  position: -webkit-sticky;
-  position: sticky;
-}
-
-.fa-instagram {
-  color: pink;
-  font-size: 40px;
-}
-
-.info--pie {
-  background-color: black;
-  color: azure;
-}
-
-.nosotros-pie {
-  background-color: #272626;
-  padding: 2 rem;
-  width: 600px;
-  padding: 2rem;
-  -webkit-box-shadow: 0rem 10px 30px -10px #e2140d;
-  box-shadow: 0rem 10px 30px -10px #e2140d;
-  margin: 0px 20px 40px 20px;
-}
-
-.servicios-pie {
-  background-color: #272626;
-  padding: 2 rem;
-  width: 600px;
-  padding: 2rem;
-  -webkit-box-shadow: 0rem 10px 30px -10px #f30f07;
-  box-shadow: 0rem 10px 30px -10px #f30f07;
-  margin: 0px 20px 40px 20px;
-}
-
-.cuerpo1 {
-  background-color: #0f0f0e;
-  width: 1200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.cuerpo1--parrafo {
-  color: snow;
-  font-size: 22px;
-  padding: 10px;
-}
-
-.imagen-index {
-  width: 42%;
-}
-
-.titulo--grande {
-  width: 800px;
-  color: turquoise;
-  font-size: 34px;
-}
-
-.cuerpo1--zonas {
-  color: aliceblue;
-}
-
-.logitos {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-line-pack: auto;
-  align-content: auto;
-}
-
-.bloques1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.informacion-foto {
-  width: 700px;
-}
-
-.imgindex {
-  position: static;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  overflow: hidden;
-  width: 100%;
-}
-
-.contacto-pie {
-  background-color: #272626;
-  width: 100%;
-  padding: 2rem;
-  -webkit-box-shadow: 0rem 10px 30px -10px #e40808;
-  box-shadow: 0rem 10px 30px -10px #e40808;
-  margin: 16px 20px 40px 20px;
-}
-
-.btn-neon {
-  position: relative;
-  display: inline-block;
-  padding: 30px 60px;
-  color: aliceblue;
-  letter-spacing: 4px;
-  font-size: 1rem;
-  text-decoration: none;
-  overflow: hidden;
-  -webkit-transition: 0.6s;
-  transition: 0.6s;
-}
-
-.btn-neon:hover {
-  background: #800d0d;
-  -webkit-box-shadow: 0 0 4px #e90303f6, 0 0 30px #db0a0a, 0 0 80px #c40303;
-  box-shadow: 0 0 4px #e90303f6, 0 0 30px #db0a0a, 0 0 80px #c40303;
-  -webkit-transition-delay: 0.7s;
-  transition-delay: 0.7s;
-}
-
-.btn-neon span {
-  position: absolute;
-  display: block;
-}
-
-#span1 {
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 4px;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    from(transparent),
-    to(#f00909)
-  );
-  background: linear-gradient(90deg, transparent, #f00909);
-}
-
-.btn-neon:hover #span1 {
-  left: 100%;
-  -webkit-transition: 1.5s;
-  transition: 1.5s;
-}
-
-.imagen-logito {
-  padding: 0px 1200px 200px;
-  position: absolute;
-  margin-top: -100px;
-}
-
-.letrass--2 {
-  width: 900px;
-}
-
-.imagen-index {
-  position: absolute;
-  left: 60%;
-  width: 37%;
-  margin: 1%;
-}
-
-.menu-servicios {
-  position: absolute;
-  padding: 0px 0px 0px 700px;
-  margin: -600px 0px 200px 70px;
-}
-
-.flex-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  background-color: #242323;
-}
-
-.flex-item {
-  width: 0px;
-  border: 3px;
-  background-color: #201818;
-}
-
-.flex-item-1 {
-  min-height: 300px;
-  margin-top: -110px;
-  -webkit-animation: swing;
-  animation: swing;
-  -webkit-animation-duration: 6s;
-  animation-duration: 6s;
-}
-
-.flex-item-2 {
-  min-height: 300px;
-  margin-top: -110px;
-}
-
-.flex-item-3 {
-  margin-top: -110px;
-  min-height: 100px;
-}
-
-.seccion-cobertura {
-  display: -ms-grid;
-  display: grid;
-  padding: 10%;
-  background-color: #242323;
-  color: #bdbdbd;
-}
-
-.parrafos1 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: imagen-quienessomos;
-  display: -ms-grid;
-  display: grid;
-  padding: auto;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: start;
-}
-
-.parrafos2 {
-  display: -ms-grid;
-  display: grid;
-  font-size: 13%;
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: parrafos2;
-  padding: 10%;
-  width: auto;
-}
-
-.contenidoservicios {
-  display: -ms-grid;
-  display: grid;
-  grid-template-areas:
-    "imagen-quienessomos parrafos1"
-    "parrafos2 imagencajita2";
-  -ms-grid-rows: auto auto;
-  grid-template-rows: auto auto;
-  background-color: #242323;
-  grid-gap: 1% 2%;
-  padding: auto;
-  width: auto;
-}
-
-.imagen-logo {
-  width: 24%;
-  position: absolute;
-  left: 62%;
-  margin-top: -3%;
-}
-
-.imagen-logito2 {
-  display: -ms-grid;
-  display: grid;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: parrafos2;
-}
-
-.imagen-quienessomos {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: auto;
-}
-
-#h1-quienessomos {
-  color: aqua;
-  font-size: 40px;
-}
-
-.h2-quienessomos {
-  color: black;
-}
-
-nav {
-  font-size: 2%;
-}
-
-.menu-inicio {
-  position: -webkit-sticky;
-  position: sticky;
-}
-
-.parrafos4 {
-  width: auto;
-}
-
-.mixin-1 {
-  height: 50%;
-  width: 80%;
-  background-color: #000000;
-}
-
-.parrafowid {
-  height: 120%;
-  width: 120%;
-  color: cadetblue;
-}
-
-.parrafowid {
-  height: 120%;
-  width: 70%;
-  color: cadetblue;
-}
