--- a/_general.scss
+++ b/_general.scss
@@ -152,7 +152,7 @@ button {
 
 .cuerpo1 {
   background-color: #0f0f0e;
-  width: 1200px;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -170,7 +170,7 @@ button {
 }
 
 .titulo--grande {
-  width: 800px;
+  width: 100%;
   color: turquoise;
   font-size: 34px;
 }
@@ -330,12 +330,8 @@ button {
 }
 
 .parrafos2 {
-  display: -ms-grid;
-  display: grid;
   font-size: 13%;
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: parrafos2;
+
   padding: 4%;
   width: 99%;
 }
@@ -355,15 +351,8 @@ button {
 }
 
 .contenidoservicios {
-  display: grid;
-  display: grid;
-  grid-template-areas:
-    "imagen-quienessomos parrafos1"
-    "parrafos2 imagencajita2";
-  -ms-grid-rows: auto auto;
-  grid-template-rows: auto auto;
   background-color: $colorfondo;
-  grid-gap: 1% 2%;
+
   padding: auto;
   width: auto;
 }
