--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ button {
 
 .cuerpo1 {
   background-color: #0f0f0e;
-  width: 1200px;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -174,7 +174,7 @@ button {
 }
 
 .titulo--grande {
-  width: 800px;
+  width: 100%;
   color: turquoise;
   font-size: 34px;
 }
@@ -328,12 +328,7 @@ button {
 }
 
 .parrafos2 {
-  display: -ms-grid;
-  display: grid;
   font-size: 13%;
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: parrafos2;
   padding: 4%;
   width: 99%;
 }
@@ -359,14 +354,7 @@ button {
 }
 
 .contenidoservicios {
-  display: -ms-grid;
-  display: grid;
-  display: grid;
-      grid-template-areas: "imagen-quienessomos parrafos1" "parrafos2 imagencajita2";
-  -ms-grid-rows: auto auto;
-  grid-template-rows: auto auto;
   background-color: #433133;
-  grid-gap: 1% 2%;
   padding: auto;
   width: auto;
 }
@@ -476,24 +464,12 @@ nav {
 }
 
 section .contenidoservicios {
-  display: -ms-grid;
-  display: grid;
-  display: grid;
-      grid-template-areas: "imagen-quienessomos parrafos1" "parrafos2 imagencajita2";
-  -ms-grid-rows: auto auto;
-  grid-template-rows: auto auto;
   background-color: turquoise;
-  grid-gap: 1% 2%;
   padding: auto;
   width: 80%;
 }
 
 section .parrafos1 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: imagen-quienessomos;
-  display: -ms-grid;
-  display: grid;
   -webkit-box-pack: start;
   -ms-flex-pack: start;
   justify-content: start;
@@ -501,7 +477,7 @@ section .parrafos1 {
 }
 
 section .titulo--grande {
-  width: 800px;
+  width: 100%;
   color: turquoise;
   font-size: 34px;
 }
@@ -511,10 +487,6 @@ section .cuerpo1--parrafo {
   font-size: 22px;
   padding: 10px;
   width: 90%;
-}
-
-section .parrafos4 {
-  width: auto;
 }
 
 article .contacto-pie {
