--- a/_variables.scss
+++ b/_variables.scss
@@ -2,3 +2,4 @@ $colorfondo: #433133;
 $colorparrafos: turquoise;
 $colormix: rgb(9, 219, 27);
 $piedepagina: rgb(185, 28, 28) (185, 28, 28);
+$menu: #8494a3;
