--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
-@import "fuentes";
 @import "variables";
+@import "fuentes";
+@import "navbar";
 @import "general";
-@import "servicios";
-@import "quienessomos";
 @import "index";
+@import "quienessomos";
+@import "fuentes";
