--- a/_general.scss
+++ b/_general.scss
@@ -6,25 +6,6 @@
   text-decoration: none;
 }
 
-.flex-cabezerademenu {
-  background-color: black;
-  font-size: 0.1rem;
-  width: top;
-}
-
-.tituloquienessomos2 {
-  color: aqua;
-}
-
-.titulo-quienesosmos {
-  color: aqua;
-}
-.tarjeta {
-  background-color: black;
-  overflow: 100%;
-  color: #d4d4d4;
-}
-
 .letramenu {
   color: darkgrey;
 }
@@ -39,6 +20,7 @@
 html {
   width: 100%;
   background-color: $colorfondo;
+  height: 100%;
 }
 
 body {
@@ -216,53 +198,6 @@ button {
   margin: 16px 20px 40px 20px;
 }
 
-.btn-neon {
-  position: relative;
-  display: inline-block;
-  padding: 25px 60px;
-  color: aliceblue;
-  letter-spacing: 4px;
-  font-size: 1rem;
-  text-decoration: none;
-  overflow: hidden;
-  -webkit-transition: 0.6s;
-  transition: 0.6s;
-}
-
-.btn-neon:hover {
-  background: #800d0d;
-  -webkit-box-shadow: 0 0 4px #e90303f6, 0 0 30px #db0a0a, 0 0 80px #c40303;
-  box-shadow: 0 0 4px #e90303f6, 0 0 30px #db0a0a, 0 0 80px #c40303;
-  -webkit-transition-delay: 0.7s;
-  transition-delay: 0.7s;
-}
-
-.btn-neon span {
-  position: absolute;
-  display: block;
-}
-
-#span1 {
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 4px;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    from(transparent),
-    to(#f00909)
-  );
-  background: linear-gradient(90deg, transparent, #f00909);
-}
-
-.btn-neon:hover #span1 {
-  left: 100%;
-  -webkit-transition: 1.5s;
-  transition: 1.5s;
-}
-
 .imagen-logito {
   padding: 0px 1200px 200px;
   position: absolute;
@@ -278,12 +213,7 @@ button {
   left: 60%;
   width: 37%;
   margin: 1%;
-}
-
-.menu-servicios {
-  position: absolute;
-  padding: 0px 0px 0px 700px;
-  margin: -600px 0px 200px 70px;
+  border-radius: 20px;
 }
 
 .flex-container {
@@ -335,15 +265,6 @@ button {
   padding: 4%;
   width: 99%;
 }
-.menu-inicio {
-  display: grid;
-  grid-template-rows: auto auto;
-  -ms-grid-rows: auto auto;
-  grid-gap: 1% 1% 1%;
-  grid-template-areas: "listamenu logo-wat";
-  padding: 5px;
-  justify-content: space-between;
-}
 
 .logowat {
   display: flex;
@@ -364,17 +285,6 @@ button {
   margin-top: -3%;
 }
 
-.imagen-logito2 {
-  display: -ms-grid;
-  display: grid;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: parrafos2;
-}
-
 .imagen-quienessomos {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -393,11 +303,6 @@ button {
 
 nav {
   font-size: 2%;
-}
-
-.menu-inicio {
-  position: -webkit-sticky;
-  position: sticky;
 }
 
 .parrafos4 {
@@ -425,7 +330,7 @@ nav {
 .final--cuerpo {
   padding: 10px;
 }
-/*# sourceMappingURL=style.css.map */
+
 @media screen and (max-width: 927px) {
   .logitos {
     display: none;
@@ -455,5 +360,25 @@ nav {
 @media screen and (max-width: 1068px) {
   .parrafowid {
     width: 95%;
+  }
+}
+
+section {
+  .tarjeta {
+    background-color: black;
+    overflow: 100%;
+    color: $colorfondo;
+  }
+
+  .porqueelejirnos1 {
+    font-size: 20px;
+    padding: 1%;
+    background-color: $colorfondo;
+  }
+
+  .mixin-1 {
+    height: 50%;
+    width: 60%;
+    background-color: $colorfondo;
   }
 }
